cmake_minimum_required(VERSION 3.17)
project(LeetCode)


set(CMAKE_CXX_STANDARD 11)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

aux_source_directory(. source_files)

add_executable(LeetCode main.cpp LeetCode2007.cpp LeetCode2007.h
        LeetCode216.cpp
        LeetCode216.h
        LeetCode39.cpp
        LeetCode39.h
        LeetCode377.cpp
        LeetCode377.h
        LeetCode2385.cpp
        LeetCode2385.h
        LeetCode2739.cpp
        LeetCode2739.h
        LeetCode1146.cpp
        LeetCode1146.h
        LeetCode2639.cpp
        LeetCode2639.h
        LeetCode1017.cpp
        LeetCode1017.h
        LeetCode1329.cpp
        LeetCode1329.h
        LeetCode2798.cpp
        LeetCode2798.h
        LeetCode1491.cpp
        LeetCode1491.h
        LeetCode2462.cpp
        LeetCode2462.h
        LeetCode2079.cpp
        LeetCode2079.h
        LeetCode2105.cpp
        LeetCode2105.h
        LeetCode2960.cpp
        LeetCode2960.h
        LeetCode2391.cpp
        LeetCode2391.h
        LeetCode994.cpp
        LeetCode994.h
        LeetCode2244.cpp
        LeetCode2244.h
        LeetCode1953.cpp
        LeetCode1953.h
        zijie1.cpp
        zijie1.h
        LeetCode2644.cpp
        LeetCode2644.h
        LeetCode1545.cpp
        LeetCode1545.h
        LeetCode826.cpp
        LeetCode826.h
        LeetCode2225.cpp
        LeetCode2225.h
        LeetCode2831.cpp
        LeetCode2831.h
        LeetCode1673.cpp
        LeetCode1673.h
        LeetCode2981.cpp
        LeetCode2981.h
        LeetCode575.cpp
        LeetCode575.h
        LeetCode1103.cpp
        LeetCode1103.h
        LeetCode3067.cpp
        LeetCode3067.h
        LeetCode2928.cpp
        LeetCode2928.h
        LeetCode2938.cpp
        LeetCode2938.h
        LeetCode3038.cpp
        LeetCode3038.h
        LeetCode3040.cpp
        LeetCode3040.h
        LeetCode881.cpp
        LeetCode881.h
        LeetCode419.cpp
        LeetCode419.h
        LeetCode2806.cpp
        LeetCode2806.h
        LeetCode2786.cpp
        LeetCode2786.h
        LeetCode2779.cpp
        LeetCode2779.h
        LeetCode522.cpp
        LeetCode2288.cpp
        LeetCode2288.h
        LeetCode2748.cpp
        LeetCode2748.h
        LCP61.cpp
        LCP61.h
        LeetCode520.cpp
        LeetCode520.h
        LeetCode503.cpp
        LeetCode503.h
        LeetCode2741.cpp
        LeetCode2741.h
        LeetCode2734.cpp
        LeetCode2734.h
        LeetCode2710.cpp
        LeetCode2710.h
        LeetCode494.cpp
        LeetCode494.h
        LeetCode3115.cpp
        LeetCode3115.h
        LeetCode3099.cpp
        LeetCode3099.h
        LeetCode3033.cpp
        LeetCode3033.h
        LeetCode1958.cpp
        LeetCode1958.h
        LeetCode724.cpp
        LeetCode724.h
        LeetCode3101.cpp
        LeetCode3101.h
        LeetCode2970.cpp
        LeetCode2970.h
        LeetCode2974.cpp
        LeetCode2974.h
        LeetCode3011.cpp
        LeetCode3011.h
        LeetCode807.cpp
        LeetCode807.h
        LeetCode721.cpp
        LeetCode721.h
        LeetCode2956.cpp
        LeetCode2956.h
        LeetCode3112.cpp
        LeetCode3112.h
        LeetCode3096.cpp
        LeetCode3096.h
        LeetCode2101.cpp
        LeetCode2101.h
        LeetCode2850.cpp
        LeetCode2850.h
        LeetCode2740.cpp
        LeetCode2740.h
        LeetCode3106.cpp
        LeetCode3106.h
        LeetCode2844.cpp
        LeetCode2844.h
        LeetCode3111.cpp
        LeetCode3111.h
        LeetCode2961.cpp
        LeetCode2961.h
        LCP40.cpp
        LCP40.h
        LeetCode3128.cpp
        LeetCode3128.h
        LeetCode3143.cpp
        LeetCode3143.h
        LeetCode572.cpp
        LeetCode572.h
        LeetCode3129.cpp
        LeetCode3129.h
        LeetCode3131.cpp
        LeetCode3131.h
        LeetCode3132.cpp
        LeetCode3132.h
        LeetCode1035.cpp
        LeetCode1035.h
        LeetCode3151.cpp
        LeetCode3151.h
        LeetCode3152.cpp
        LeetCode3152.h
        LeetCode3148.cpp
        LeetCode3148.h
        LeetCode3137.cpp
        LeetCode3137.h
        LeetCode551.cpp
        LeetCode551.h
        LeetCode3133.cpp
        LeetCode3133.h
        LeetCode3146.cpp
        LeetCode3146.h
        LeetCode698.cpp
        LeetCode698.h
        LeetCode690.cpp
        LeetCode690.h
        LeetCode3144.cpp
        LeetCode3144.h
        LeetCode3176.cpp
        LeetCode3176.h
        LeetCode977.cpp
        LeetCode977.h
        LeetCode2181.cpp
        LeetCode2181.h
        LeetCode3174.cpp
        LeetCode3174.h
        LeetCode2555.cpp
        LeetCode2555.h
        LeetCode2576.cpp
        LeetCode2576.h
        LeetCode2860.cpp
        LeetCode2860.h
        LeetCode2390.cpp
        LeetCode2390.h
        LeetCode2848.cpp
        LeetCode2848.h
        LeetCode1450.cpp
        LeetCode1450.h
        LeetCode2332.cpp
        LeetCode2332.h
        LeetCode2414.cpp
        LeetCode2414.h
        LeetCode2708.cpp
        LeetCode2708.h
        LeetCode2374.cpp
        LeetCode2374.h
        LeetCode997.cpp
        LeetCode997.h
        LeetCode1014.cpp
        LeetCode1014.h
        LeetCode2207.cpp
        LeetCode2207.h
        LeetCode2535.cpp
        LeetCode2535.h
        LeetCode2516.cpp
        LeetCode2516.h
        LeetCode2024.cpp
        LeetCode2024.h
        LeetCode2073.cpp
        LeetCode2073.h
        LeetCode1845.cpp
        LeetCode1845.h
        LeetCode983.cpp
        LeetCode983.h
        LeetCode1870.cpp
        LeetCode1870.h
        LeetCode1227.cpp
        LeetCode1227.h
        LeetCode2187.cpp
        LeetCode2187.h
        LeetCode134.cpp
        LeetCode134.h
        LeetCode1436.cpp
        LeetCode1436.h
        LeetCode3162.cpp
        LeetCode3162.h
        LeetCode3164.cpp
        LeetCode3164.h
        LeetCode3158.cpp
        LeetCode3158.h
        LeetCode1884.cpp
        LeetCode1884.h
        LeetCode3200.cpp
        LeetCode3200.h
        LeetCode3194.cpp
        LeetCode3194.h
        LeetCode3191.cpp
        LeetCode3191.h
        LeetCode3192.cpp
        LeetCode3192.h
        LeetCode910.cpp
        LeetCode910.h
        LeetCode3184.cpp
        LeetCode3184.h
        LeetCode3185.cpp
        LeetCode3185.h
        LeetCode3175.cpp
        LeetCode3175.h
        LeetCode3180.cpp
        LeetCode3180.h
        LeetCode684.cpp
        LeetCode684.h
        LeetCode3211.cpp
        LeetCode3211.h
        LeetCode3216.cpp
        LeetCode3216.h
        LeetCode3259.cpp
        LeetCode3259.h
        LeetCode3226.cpp
        LeetCode3226.h
        LeetCode633.cpp
        LeetCode633.h
        LeetCode3222.cpp
        LeetCode3222.h
        LeetCode3254.cpp
        LeetCode3254.h
        LeetCode3255.cpp
        LeetCode3255.h
        LeetCode638.cpp
        LeetCode638.h
        LeetCode3242.cpp
        LeetCode3242.h
        LeetCode540.cpp
        LeetCode540.h
        LeetCode3258.cpp
        LeetCode3258.h
        LeetCode3249.cpp
        LeetCode3249.h
        LeetCode3239.cpp
        LeetCode3239.h
        LeetCode3240.cpp
        LeetCode3240.h
        LeetCode825.cpp
        LeetCode825.h
        LeetCode3243.cpp
        LeetCode3243.h
        LeetCode3248.cpp
        LeetCode3248.h
        LeetCode3233.cpp
        LeetCode3233.h
        LeetCode3238.cpp
        LeetCode3238.h
        LeetCode743.cpp
        LeetCode743.h
        LeetCode3206.cpp
        LeetCode3206.h
        LeetCode3208.cpp
        LeetCode3208.h
        LeetCode3232.cpp
        LeetCode3232.h
        LeetCode3274.cpp
        LeetCode3274.h
        LeetCode3001.cpp
        LeetCode3001.h
        LeetCode999.cpp
        LeetCode999.h
        LeetCode935.cpp
        LeetCode935.h
        LeetCode2717.cpp
        LeetCode2717.h
        LeetCode3264.cpp
        LeetCode3264.h
        LeetCode1338.cpp
        LeetCode1338.h
        LeetCode3291.cpp
        LeetCode3291.h
        LeetCode3285.cpp
        LeetCode3285.h
        LeetCode3138.cpp
        LeetCode3138.h
        LeetCode2545.cpp
        LeetCode2545.h
        LeetCode1387.cpp
        LeetCode1387.h
        LeetCode1705.cpp
        LeetCode1705.h
        LeetCode3083.cpp
        LeetCode3083.h
        LeetCode3046.cpp
        LeetCode3046.h
        LeetCode1366.cpp
        LeetCode1366.h
        LeetCode1367.cpp
        LeetCode1367.h
        LeetCode2274.cpp
        LeetCode2274.h
        LeetCode3019.cpp
        LeetCode3019.h
        LeetCode2264.cpp
        LeetCode2264.h
        LeetCode3297.cpp
        LeetCode3297.h
        LeetCode3280.cpp
        LeetCode3280.h
        LeetCode2270.cpp
        LeetCode2270.h
        LeetCode3065.cpp
        LeetCode3065.h
        LeetCode3066.cpp
        LeetCode3066.h
        LeetCode3095.cpp
        LeetCode3095.h
        LeetCode3097.cpp
        LeetCode3097.h
        LeetCode1561.cpp
        LeetCode1561.h
        LeetCode40.cpp
        LeetCode40.h
        LeetCode45.cpp
        LeetCode45.h
        LeetCode119.cpp
        LeetCode119.h
        LeetCode219.cpp
        LeetCode219.h
        LeetCode350.cpp
        LeetCode350.h
        LeetCode541.cpp
        LeetCode541.h
        LeetCode81.cpp
        LeetCode81.h
        LeetCode598.cpp
        LeetCode598.h
        LeetCode680.cpp
        LeetCode680.h
        LeetCode922.cpp
        LeetCode922.h
        LeetCode90.cpp
        LeetCode90.h
        LeetCode47.cpp
        LeetCode47.h
        LeetCode59.cpp
        LeetCode59.h
        LeetCode80.cpp
        LeetCode80.h
        LeetCode63.cpp
        LeetCode63.h
        LeetCode1552.cpp
        LeetCode1552.h
        LeetCode1706.cpp
        LeetCode1706.h
        LeetCode1299.cpp
        LeetCode1299.h
        LeetCode1287.cpp
        LeetCode1287.h
        LeetCode2080.cpp
        LeetCode2080.h
        LeetCode624.cpp
        LeetCode624.h
        LeetCode2595.cpp
        LeetCode2595.h
        LeetCode2506.cpp
        LeetCode2506.h
        LeetCode1656.cpp
        LeetCode1656.h
        LeetCode2502.cpp
        LeetCode2502.h
        LeetCode1472.cpp
        LeetCode1472.h
        LeetCode2597.cpp
        LeetCode2597.h
        LeetCode3306.cpp
        LeetCode3306.h
        LeetCode2643.cpp
        LeetCode2643.h
        LeetCode2680.cpp
        LeetCode2680.h
        LeetCode2116.cpp
        LeetCode2116.h
        LeetCode2140.cpp
        LeetCode2140.h
        LeetCode2873.cpp
        LeetCode2873.h
        LeetCode2874.cpp
        LeetCode2874.h
        LeetCode1863.cpp
        LeetCode1863.h
        LeetCode416.cpp
        LeetCode416.h
        LeetCode3396.cpp
        LeetCode3396.h
        LeetCode3375.cpp
        LeetCode3375.h
        LeetCode2843.cpp
        LeetCode2843.h
        LeetCode1992.cpp
        LeetCode1992.h
        LeetCode1534.cpp
        LeetCode1534.h
        LeetCode2537.cpp
        LeetCode2537.h
        LeetCode2176.cpp
        LeetCode2176.h
        LeetCode2364.cpp
        LeetCode2364.h
        LeetCode781.cpp
        LeetCode781.h
        LeetCode2563.cpp
        LeetCode2563.h
        LeetCode2145.cpp
        LeetCode2145.h
        LeetCode2799.cpp
        LeetCode2799.h
)
